# Valar

./: .gitmodules  CMakeLists.txt  README.md
cmake/modules/: FindGLFW.cmake
res/shaders/base/: base.vert
src/: ValcanoApplication.cpp  ValcanoApplication.hpp
src/aux/: CallbackManager.cpp  CallbackManager.hpp
src/aux/exceptions/: NotImplemented.hpp  VulkanError.hpp
src/aux/logging/: LogUtils.hpp  Logger.cpp  Logger.hpp
src/aux/time/: TimeUtils.hpp  Timer.hpp
src/gfx/: Renderer.cpp  Renderer.hpp
src/gfx/vulkan/: Device.cpp  Device.hpp  FrameBuffer.cpp  FrameBuffer.hpp  Instance.cpp  Instance.hpp  RenderPass.cpp  RenderPass.hpp  Surface.hpp  Swapchain.cpp  Swapchain.hpp  VulkanDebug.cpp  VulkanDebug.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp
src/gfx/vulkan/VertexBuffer/: VertexLayout.hpp
src/gfx/vulkan/commandbuffer/: CommandBuffer.cpp  CommandBuffer.hpp
src/gfx/vulkan/debug/: VulkanDebug.cpp  VulkanDebug.hpp
src/gfx/vulkan/display/: CommandBuffer.cpp  CommandBuffer.hpp  Device.cpp  Device.hpp  Instance.cpp  Instance.hpp  Surface.cpp  Surface.hpp  Swapchain.cpp  Swapchain.hpp
src/gfx/vulkan/pipelines/: GraphicsPipeline.cpp  GraphicsPipeline.hpp  Pipeline.hpp  PipelineCache.hpp  RenderPass.cpp  RenderPass.hpp
src/gfx/vulkan/shaders/: Shader.cpp  Shader.hpp  ShaderModule.cpp  ShaderModule.hpp  SpvReflection.cpp  SpvReflection.hpp
src/gfx/vulkan/vertexbuffer/: VertexBuffer.hpp  VertexLayout.hpp
src/gfx/window/: ContextWindow.cpp  ContextWindow.hpp  WindowCallbackManager.cpp  WindowCallbackManager.hpp  WindowManager.cpp  WindowManager.hpp
src/io/filesystem/: FileSystem.cpp  FileSystem.hpp  MetaFileSystem.hpp
src/math/linalg/: LinAlgTypes.hpp  Quaternion.hpp  Rotations.hpp  TransformCompound.hpp  Vector.hpp
src/math/linalg/Matrix/: Matrix.hpp  MatrixUtils.hpp  RotationMatrix.hpp  ScaleMatrix.hpp
src/math/util/: MathUtils.hpp  NumberTraits.hpp
src/util/: GlfwHelper.cpp  GlfwHelper.hpp  StringUtils.cpp  StringUtils.hpp  stringutils.hpp
src/util/memory/: PointerUtils.hpp
